...
                android:layout_gravity="top"
                android:layout_marginBottom="52dp"
                app:layout_collapseMode="pin"
                app:title="Cinema TXT"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@android:color/transparent"
...
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:paddingEnd="64dp"
        android:paddingStart="8dp"
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:clipToPadding="false"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
