...
            android:background="@color/white"
            app:expandedTitleGravity="bottom"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:popupTheme="@style/Theme.CinemaTXT.PopupOverlay">
            <ImageView
                android:contentDescription="@string/description_poster_show"
                android:id="@+id/image_poster2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:elevation="5dp"
        android:src="@drawable/ic_favorite_selector"
        app:layout_anchor="@+id/app_bar_layout"
...
